# necessary-compositionality

./: .gitignore  README.md  pyproject.toml
src/complinearity/: _config.py  analyse_embeddings_probes.py  embedding_utils.py  get_embeddings.py  run_all_analyses_simple.sh  run_all_models.sh  run_all_probes.sh  train_probes.py
src/complinearity/datasets/: clean_dsprites_dataset.py  mpi3d_dataset.py  pug_dataset.py
